--- a/src/components/preview/component/table.less
+++ b/src/components/preview/component/table.less
@@ -54,6 +54,13 @@
         align-items: center;
         justify-content: center;
         text-align: left;
+        &_mark {
+          display: inline-block;
+          color: #191919;
+          margin-left: 3pt;
+          font-size: 10pt;
+          font-weight: bold;
+        }
       }
       .body_row_item_title {
         background-color: #e5f5f5;
