--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -16,7 +16,7 @@
     font-size: 9pt;
     font-weight: bold;
     line-height: 16pt;
-    min-width: 177pt;
+    min-width: 169pt;
     &_title {
       width: 48pt;
       text-align: justify;
@@ -30,6 +30,8 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  height:200pt;
+  overflow: hidden;
   .imgList_item {
     flex: 1;
     margin-right: 10pt;
