--- a/src/components/preview/component/stencil/default/page.less
+++ b/src/components/preview/component/stencil/default/page.less
@@ -78,13 +78,14 @@
   );
 }
 .page_content {
-  padding: 0pt 29pt;
+  // padding: 0pt 29pt;
   position: relative;
   flex: 1;
   overflow: hidden;
   box-sizing: border-box;
   margin: 5pt 0;
   .page_content_item {
+    margin: 0pt 29pt;
     margin-top: 9pt;
     display: flex;
     flex-direction: column;
@@ -103,10 +104,6 @@
     // font-weight: bold;
     align-self: flex-end;
     margin-top: 4pt;
-  }
-  .page_content_imgBox {
-    width: 100%;
-    height: 100%;
   }
   .page_content_img {
     width: 100%;
