修改全部计算完毕回调

--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -13,6 +13,7 @@
   padding: 7pt 2pt;
   display: flex;
   flex-wrap: wrap;
+  max-height: 65pt;
   // margin-right: -30pt;
   .info_item {
     // margin-right: 30pt;
