--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -14,6 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   max-height: 65pt;
+  overflow: hidden;
   // margin-right: -30pt;
   .info_item {
     // margin-right: 30pt;
@@ -47,7 +48,7 @@
 }
 .description {
   border-top: 3pt solid #000;
-  height: 250pt;
+  height: 217pt;
   padding: 5pt;
   font-size: 10pt;
   font-weight: bold;
