--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -1,11 +1,36 @@
-.body{
+.body {
   margin: 0pt 29pt;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-content: flex-start;
 }
-.title {
-  font-size: 20pt;
+.boldText {
   font-weight: bold;
+  font-size: 11pt;
+  font-family: STXihei;
+  color: #1c2438;
+}
+.header {
   text-align: center;
   margin-bottom: 10pt;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: -95pt;
+  &_img {
+    width: 55pt;
+    margin-right: 40pt;
+  }
+  &_hospital {
+    font-size: 20pt;
+    font-weight: bold;
+    color: #1c2438;
+  }
+  &_title {
+    font-size: 15pt;
+    font-weight: bold;
+  }
 }
 .info {
   border-top: 3pt solid #000;
@@ -13,8 +38,9 @@
   padding: 7pt 2pt;
   display: flex;
   flex-wrap: wrap;
-  max-height: 65pt;
+  // max-height: 65pt;
   overflow: hidden;
+  // justify-content: space-between;
   // margin-right: -30pt;
   .info_item {
     // margin-right: 30pt;
@@ -23,58 +49,66 @@
     line-height: 16pt;
     min-width: 169pt;
     &_title {
-      width: 48pt;
+      width: 45pt;
       text-align: justify;
       text-align-last: justify;
       display: inline-block;
     }
   }
 }
-.imgList {
-  margin: 10pt 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  height:200pt;
-  overflow: hidden;
-  .imgList_item {
-    flex: 1;
-    margin-right: 10pt;
-    .imgList_item_img {
-      width: 100%;
-      height: 200pt;
+.imgList_box {
+  margin: 2pt 0;
+  .imgList {
+    margin-top: 2pt;
+    display: flex;
+    justify-content: space-evenly;
+    overflow: hidden;
+    align-items: flex-start;
+    border-bottom: 2pt solid #000;
+    // margin-right: -10pt;
+    padding-bottom: 8pt;
+    .imgList_item {
+      flex: 1;
+      width: 1px;
     }
   }
 }
+.marginRight10 {
+  margin-right: 10pt;
+}
+
 .description {
-  border-top: 3pt solid #000;
-  height: 217pt;
+  width: 100%;
+  flex: 1;
   padding: 5pt;
   font-size: 10pt;
   font-weight: bold;
   overflow: hidden;
 }
 .say {
-  border-top: 3pt solid #000;
-  height: 100pt;
+  width: 100%;
+  height: 190pt;
   padding: 5pt;
   font-size: 10pt;
   font-weight: bold;
   overflow: hidden;
 }
 .foot {
-  border-top: 3pt solid #000;
+  border-top: 2pt solid #000;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
   overflow: hidden;
   padding-top: 3pt;
   .foot_row {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 10pt;
+    margin-bottom: 2pt;
     .foot_row_item {
       font-size: 10pt;
       font-weight: bold;
       margin-right: 5pt;
-      min-width: 135pt;
+      min-width: 140pt;
     }
   }
 }
@@ -87,6 +121,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 5pt;
+  width: 100%;
   .reportInfo_item {
     font-size: 8pt;
     font-weight: bold;
