--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -6,10 +6,9 @@
   align-content: flex-start;
 }
 .boldText {
-  font-weight: bold;
   font-size: 11pt;
   font-family: STXihei;
-  color: #1c2438;
+  color: #000;
 }
 .header {
   text-align: center;
@@ -24,30 +23,25 @@
   }
   &_hospital {
     font-size: 20pt;
-    font-weight: bold;
-    color: #1c2438;
+    color: #000;
   }
   &_title {
     font-size: 15pt;
-    font-weight: bold;
+    color: #000;
   }
 }
 .info {
-  border-top: 3pt solid #000;
-  border-bottom: 3pt solid #000;
+  border-top: 1pt solid #000;
+  border-bottom: 1pt solid #000;
   padding: 7pt 2pt;
   display: flex;
   flex-wrap: wrap;
-  // max-height: 65pt;
   overflow: hidden;
-  // justify-content: space-between;
-  // margin-right: -30pt;
   .info_item {
-    // margin-right: 30pt;
-    font-size: 9pt;
-    font-weight: bold;
+    font-size: 11pt;
     line-height: 16pt;
     min-width: 169pt;
+    color: #191919;
     &_title {
       width: 45pt;
       text-align: justify;
@@ -58,13 +52,13 @@
 }
 .imgList_box {
   margin: 2pt 0;
+  border-bottom: 1pt solid #000;
   .imgList {
     margin-top: 2pt;
     display: flex;
     justify-content: space-evenly;
     overflow: hidden;
     align-items: flex-start;
-    border-bottom: 2pt solid #000;
     // margin-right: -10pt;
     padding-bottom: 8pt;
     .imgList_item {
@@ -82,7 +76,7 @@
   flex: 1;
   padding: 5pt;
   font-size: 10pt;
-  font-weight: bold;
+  // font-weight: bold;
   overflow: hidden;
 }
 .say {
@@ -90,11 +84,11 @@
   height: 190pt;
   padding: 5pt;
   font-size: 10pt;
-  font-weight: bold;
+  // font-weight: bold;
   overflow: hidden;
 }
 .foot {
-  border-top: 2pt solid #000;
+  border-top: 1pt solid #000;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -105,16 +99,19 @@
     justify-content: flex-end;
     margin-bottom: 2pt;
     .foot_row_item {
-      font-size: 10pt;
-      font-weight: bold;
+      font-size: 11pt;
       margin-right: 5pt;
       min-width: 140pt;
     }
   }
 }
+body {
+  color: rgba(0, 0, 0, 0.85);
+}
 .pre {
   white-space: pre-wrap;
   word-wrap: break-word;
+  font-size: 11pt;
 }
 
 .reportInfo {
@@ -123,11 +120,10 @@
   margin-bottom: 5pt;
   width: 100%;
   .reportInfo_item {
-    font-size: 8pt;
-    font-weight: bold;
+    font-size: 11pt;
+    color: #191919;
     & > span {
       display: inline-block;
-      min-width: 46pt;
     }
   }
 }
