--- a/src/components/preview/index.less
+++ b/src/components/preview/index.less
@@ -13,6 +13,10 @@
     position: static;
   }
 }
-.printWindows{
+.printWindows {
   overflow: visible;
+}
+
+body {
+  color: rgba(0, 0, 0, 0.85);
 }
