--- a/src/components/preview/component/stencil/default/pos.less
+++ b/src/components/preview/component/stencil/default/pos.less
@@ -12,3 +12,11 @@
   width: 100pt;
   height: 100pt;
 }
+.bg{
+  position: absolute;
+  width: 63pt;
+  height: 111pt;
+  background-color: #fff;
+  left: 83%;
+  top: 53%;
+}
