--- a/src/components/preview/component/stencil/default/page.less
+++ b/src/components/preview/component/stencil/default/page.less
@@ -106,11 +106,12 @@
     margin-top: 4pt;
   }
   .page_content_img {
-    width: 100%;
-    height: 100%;
     box-sizing: border-box;
-    position: relative;
-    background: #666;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    background: #fff;
     overflow: hidden;
   }
 }
