--- a/src/components/preview/component/stencil/default/pos.less
+++ b/src/components/preview/component/stencil/default/pos.less
@@ -20,3 +20,12 @@
   left: 83%;
   top: 53%;
 }
+
+.bg1{
+  position: absolute;
+  width: 40pt;
+  height: 111pt;
+  background-color: #fff;
+  left: 83%;
+  top: 44%;
+}
