--- a/src/components/preview/component/stencil/default/pos.less
+++ b/src/components/preview/component/stencil/default/pos.less
@@ -8,24 +8,24 @@
   font-weight: 600;
   color: #666;
 }
-.img{
+.img {
   width: 100pt;
   height: 100pt;
 }
-.bg{
+.bg {
   position: absolute;
-  width: 63pt;
-  height: 111pt;
-  background-color: #fff;
-  left: 83%;
+  width: 12%;
+  height: 15%;
+  left: 82.6%;
   top: 53%;
+  background-color: #fff;
 }
 
-.bg1{
+.bg1 {
   position: absolute;
-  width: 40pt;
-  height: 111pt;
-  background-color: #fff;
-  left: 83%;
+  width: 7.6%;
+  height: 10%;
+  background-color: fff;
+  left: 82.6%;
   top: 44%;
 }
