--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -71,21 +71,25 @@
 .marginRight10 {
   margin-right: 10pt;
 }
-
+.box{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 .description {
   width: 100%;
   flex: 1;
   padding: 5pt;
   font-size: 10pt;
   // font-weight: bold;
-  overflow: hidden;
+  // overflow: hidden;
 }
 .say {
   width: 100%;
-  height: 190pt;
+  min-height: 190pt;
   padding: 5pt;
   font-size: 10pt;
-  // font-weight: bold;
   overflow: hidden;
 }
 .foot {
@@ -109,7 +113,7 @@
 .pre {
   white-space: pre-wrap;
   word-wrap: break-word;
-  font-size: 11pt;
+  font-size: 7pt;
 }
 
 .reportInfo {
