--- a/src/components/preview/component/stencil/default/pos.less
+++ b/src/components/preview/component/stencil/default/pos.less
@@ -18,14 +18,14 @@
   height: 15%;
   left: 82.6%;
   top: 53%;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .bg1 {
   position: absolute;
   width: 7.6%;
   height: 10%;
-  background-color: fff;
+  background-color: #ffffff;
   left: 82.6%;
   top: 44%;
 }
