--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -4,6 +4,8 @@
   flex-direction: column;
   height: 100%;
   align-content: flex-start;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 .boldText {
   font-size: 11pt;
@@ -76,14 +78,13 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  box-sizing: border-box;
 }
 .description {
   width: 100%;
   flex: 1;
   padding: 5pt;
   font-size: 10pt;
-  // font-weight: bold;
-  // overflow: hidden;
 }
 .say {
   width: 100%;
@@ -99,6 +100,8 @@
   justify-content: space-between;
   overflow: hidden;
   padding-top: 3pt;
+  box-sizing: border-box;
+  height: 50pt;
   .foot_row {
     display: flex;
     justify-content: flex-end;
