修复B超高度裁剪问题

--- a/src/components/preview/component/stencil/default/index.less
+++ b/src/components/preview/component/stencil/default/index.less
@@ -30,7 +30,7 @@
 @media print {
   .A4 {
     page-break-after: always;
-    margin-bottom: 0;
+    margin-bottom: 0
     // height: @height - 1mm;
   }
 }
@@ -38,7 +38,7 @@
 @page {
   size: A4;
   margin: @margin;
-  // margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 // @media print {
