--- a/src/components/preview/component/stencil/default/report.less
+++ b/src/components/preview/component/stencil/default/report.less
@@ -1,11 +1,13 @@
 .body {
-  margin: 0pt 29pt;
+  margin: 0pt 25pt;
   display: flex;
   flex-direction: column;
-  height: 100%;
   align-content: flex-start;
   overflow: hidden;
   box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  bottom: 0;
 }
 .boldText {
   font-size: 11pt;
@@ -101,7 +103,6 @@
   overflow: hidden;
   padding-top: 3pt;
   box-sizing: border-box;
-  height: 50pt;
   .foot_row {
     display: flex;
     justify-content: flex-end;
