--- a/src/components/preview/component/stencil/default/cover.less
+++ b/src/components/preview/component/stencil/default/cover.less
@@ -49,16 +49,19 @@
     display: inline-block;
     text-align: justify;
     text-align-last: justify;
+    line-height: normal;
   }
   .cover_box_colon {
     color: rgba(42, 48, 48, 1);
     font-size: 14pt;
     font-weight: bold;
+    line-height: normal;
   }
   .cover_box_text {
     font-size: 13pt;
     color: #2a3030;
     margin-left: 13pt;
+    line-height: normal;
     display: inline-block;
   }
 }
