--- a/src/components/preview/component/stencil/default/index.less
+++ b/src/components/preview/component/stencil/default/index.less
@@ -29,7 +29,7 @@
 @media print {
   .A4 {
     page-break-after: always;
-    margin-bottom: 0
+    margin-bottom: 0;
     // height: @height - 1mm;
   }
 }
@@ -38,6 +38,15 @@
   size: A4;
   margin: @margin;
   margin-bottom: 0;
+// 双面打印
+  &:left {
+    margin: @margin;
+    margin-bottom: 0;
+  }
+  &:right {
+    margin: @margin;
+    margin-bottom: 0;
+  }
 }
 
 // @media print {
