--- a/src/components/preview/component/stencil/default/index.less
+++ b/src/components/preview/component/stencil/default/index.less
@@ -38,15 +38,12 @@
   size: A4;
   margin: @margin;
   margin-bottom: 0;
-// 双面打印
-  &:left {
-    margin: @margin;
-    margin-bottom: 0;
-  }
-  &:right {
-    margin: @margin;
-    margin-bottom: 0;
-  }
+  // :left {
+  //   margin: @margin!important;
+  // }
+  // :right {
+  //   margin-left: 10cm!important;
+  // }
 }
 
 // @media print {
