--- a/src/components/preview/component/stencil/default/page.less
+++ b/src/components/preview/component/stencil/default/page.less
@@ -134,6 +134,7 @@
     font-size: 8pt;
     font-weight: 400;
     color: #292f2f;
+    white-space:nowrap;
   }
   .page_foot_text_center {
     text-align: center;
